fix for the header on mobile on safari

--- a/css/donut.css
+++ b/css/donut.css
@@ -737,6 +737,7 @@ header .search-bar {
   }
   .navbar-header {
     float: left;
+    min-width: 240px;
   }
   .main-nav {
     clear: both ;
